--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@rushstack/eslint-patch": "^1.1.4",
-    "@spiriit/vite-plugin-svg-spritemap": "^1.0.2",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -46,6 +45,7 @@
     "vite": "^4.3.5",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^3.0.8",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.6.5"
   },
   "lint-staged": {
